Username and IntraProfile in profile object Create home page of the user after authentication

--- a/42-transcendence/client/src/styles/globals.css
+++ b/42-transcendence/client/src/styles/globals.css
@@ -1,5 +1,7 @@
 * {
   font-family: 'Baloo';
+  --bg-image: url("/wallpaperHome.jpg") no-repeat center center fixed;
+  
 }
 
 nav {
@@ -23,7 +25,7 @@ nav {
 }
 
 body { /* to change with the home div */
-    background: url("/wallpaperHome.jpg") no-repeat center center fixed;
+    background:var(--bg-image);
     background-size: cover;
     margin : 0;
 }
