--- a/42-transcendence/client/src/styles/globals.css
+++ b/42-transcendence/client/src/styles/globals.css
@@ -89,3 +89,43 @@ body { /* to change with the home div */
   border-radius: 33px;
   margin-top: 10%;
 }
+
+/* profile css */
+
+.profile-info-container {
+    padding : 10px;
+    height: 800px;
+    width: 557px;
+    border-radius: 81px;
+    background-color:  #787CA980 ;
+
+    display: grid;
+    grid-template-columns:1fr 1fr ;
+    grid-template-rows:repeat(5,  1fr);
+    justify-items: center;
+    align-items: center;
+
+}
+
+.profile-label {
+    
+    padding: 10px;
+    border-radius: 15px;
+
+    background: #D9D9D9;
+    text-align: center;
+    font-size: large;
+}
+
+
+
+.profile-label.phone-number{
+    grid-column: 1/3;
+    grid-row: 4/5;
+    justify-self: stretch;
+}
+.profile-label.date-of-birth{
+  grid-column: 1/3;
+  grid-row: 5/6;
+  justify-self: stretch;
+}
