Change to use SPA and use of thailwind for css

--- a/42-transcendence/client/src/styles/globals.css
+++ b/42-transcendence/client/src/styles/globals.css
@@ -1,243 +1,10 @@
-* {
-  font-family: 'Baloo';
-  --bg-image: url("/wallpaperHome.jpg") no-repeat center center fixed;
-  
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  background: rgb(44,59,124);
+  background: linear-gradient(90deg, rgba(44,59,124,1) 0%, rgba(13,23,67,1) 100%);
 }
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  gap : 16px;
-  color :white;
-  padding: 25px 50px 10px 50px;
-}
-
-#logo-game {
-  max-width: 50px;
-  max-height: 50px;
-}
-
-.navbar{
-  background: linear-gradient(to left, rgba(22, 33, 91,.8), rgba(22, 33, 91,1));
-  border-bottom : 5px solid;
-  border-image:linear-gradient(to right, rgb(40, 50, 137), rgb(101, 206, 250)) 1;
-}
-
-body { /* to change with the home div */
-    background:var(--bg-image);
-    background-size: cover;
-    margin : 0;
-}
-
-.navigation-links {
-  display: flex;
-  gap: 16px;
-  align-self:center;
-}
-
-.home-login-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
-  gap: 50px;
-}
-
-.login-game {
-  margin-top: 70px;
-  border: 5px solid white;
-  border-radius: 10px;
-}
-
-.login-description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.login-description-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background: rgba(224, 234, 248, 0.5);
-  margin-top: 290px;
-  border-radius: 85px;
-  padding: 30px;
-  /* max-width: 691px;
-  min-width: 50px; */
-  width: 75%;
-  /* height: 50%; */
-  overflow: hidden;
- 
-}
-
-
-.welcome-description, #intra-login-button{
-  /* font-weight: 400px; */
-  font-size: 110%;
-  display: flex;
-  align-items: center;
-}
-
-.welcome-description{
-  line-height: 38px;
-  text-align: center;
-}
-
-#intra-login-button{
-  background: #E0EAF8;
-  border-radius: 33px;
-  border: 0;
-  padding: 12px 50px;
-  cursor: pointer;
-  margin-top: 50px;
-}
-
-a:link { text-decoration: none; }
-
-#intra-login-button:hover{
-  background-color: #65688180;
-}
-/******************************* Login css ************************************/
-
-
-.login-form{
-  color :white;
-  font-size: 1.2rem;
-  font-weight: 500;
-  height: 400px;
-  max-width: 400px;
-  width:50%;
-  background-color: rgba(255,255,255,0.13);
-  position: absolute;
-  transform: translate(-50%,-50%);
-  top: 50%;
-  left: 50%;
-  border-radius: 10px;
-  backdrop-filter: blur(10px);
-  border: 2px solid rgba(255,255,255,0.1);
-  box-shadow: 0 0 40px rgba(8,7,16,0.6);
-  padding: 50px 35px 5px;
-}
-
-#nickname {
-  display: block;
-  height: 50px;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  border:none;
-  padding: 0 10px;
-  margin-top: 8px;
-  font-size: 14px;
-  font-weight: 300;
-}
-
-.login-page-element-container {
-  display: flex;
-  flex-direction: column;
-  gap:5px;
-  margin-top: 15px;
-  padding: 10px;
-}
-.login-page-element-container #picture{
-  padding: 10px;
-  border : 1px solid black;
-  border-radius: 10px;
-}
-
-input[type=file]::file-selector-button {
-  margin-right: 20px;
-  border: none;
-  background: #084cdf;
-  padding: 10px 20px;
-  border-radius: 10px;
-  color: #fff;
-  cursor: pointer;
-  transition: background .2s ease-in-out;
-}
-
-input[type=file]::file-selector-button:hover {
-  background: #0d45a5;
-}
-
-.login-submit-button{
-  padding: 5px;
-  margin-top: 20px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #080710;
-  padding: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#nickname.err.success{
-  border: 3px solid green;
-}
-/* to change latter */
-
-#nickname.err{
-  border:1.5px solid red;
-}
-
-.error {
-  font-size: 0.8em;
-  color : red;
-  font-weight: 100;
-}
-
 /******************************* profile css **********************************/
-
-.profile-page {
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(500px,1fr));
-  grid-template-rows: repeat(auto-fit,minmax(500px,1fr));
-  align-items: center ;
-}
-
-.profile-container {
-    padding : 10px;
-    border-radius: 81px;
-    background-color:  #787CA980 ;
-    display: grid;
-    grid-template-columns:1fr 1fr ;
-    grid-template-rows:repeat(5,  1fr);
-    justify-items: center;
-    align-items: center;
-}
-
-.profile-info {
-    height: 800px;
-    width: 557px;
-    justify-self: center;
-  }
-
-.profile-friend {
-  Width :1000px;
-  Height : 831px;
-  justify-self: center;
-}
-
-.profile-label {
-    
-    padding: 10px;
-    border-radius: 15px;
-    background: #D9D9D9;
-    text-align: center;
-    font-size: large;
-}
-
-
-
-.profile-label.phone-number{
-    grid-column: 1/3;
-    grid-row: 4/5;
-    justify-self: stretch;
-}
-.profile-label.date-of-birth{
-  grid-column: 1/3;
-  grid-row: 5/6;
-  justify-self: stretch;
-}
