--- a/42-transcendence/client/src/styles/globals.css
+++ b/42-transcendence/client/src/styles/globals.css
@@ -11,6 +11,8 @@ html {
   font-family: 'Outfit'
 }
 
+/* css properties that I couldn't do with tailwind :sad: */
+
 .sh{
   text-shadow: 2px 2px 2px black;
 
@@ -19,10 +21,25 @@ html {
   margin-bottom:300px;
 }
 
+.mg-top{
+  margin-top:300px;
+}
+
 @media screen and (max-width: 1279px){
   .css{
     margin-bottom:0;
   }
+}
+
+.pfp-container {
+  filter:url(#round);
+  
+}
+
+.pfp {
+  background-color: #0D1743; /*color of the main-background*/
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+
 }
 
 
