Implement form error and span

--- a/42-transcendence/client/src/styles/globals.css
+++ b/42-transcendence/client/src/styles/globals.css
@@ -42,5 +42,7 @@ html {
 
 }
 
-
+.error {
+  border-color: red;
+}
 /******************************* profile css **********************************/
