Major changes to input form of UpdateProfile component: - new state and useEffect to make the button disabeled at wrong inputs - Label text color with the color of the border

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -45,4 +45,8 @@ html {
 .error {
   border-color: red;
 }
+
+.valid {
+  border-color: green;
+}
 /******************************* profile css **********************************/
