Profile border and Icon done

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -50,5 +50,51 @@ html {
 }
 
 
+/*===== The CSS =====*/
 
+
+
+.progress .track, .progress .fill{
+	fill: rgba(0, 0, 0, 0);
+	stroke-width: 50;
+	transform: translate(100px, 700px)rotate(-90deg);
+}
+.progress .track{
+	stroke: rgb(56, 71, 83);
+}
+.progress .fill {
+	stroke: rgb(255, 255, 255);
+	stroke-linecap: round;
+	stroke-dasharray: 2160;
+	stroke-dashoffset: 0;
+	transition: stroke-dashoffset 1s;
+}
+.progress.blue .fill {
+	stroke: rgb(104, 214, 198);
+}
+.progress.green .fill {
+	stroke: rgb(186, 223, 172);
+}
+.progress .value, .progress .text {
+	font-family: 'Open Sans';
+	fill: rgb(255, 255, 255);
+	text-anchor: middle;
+}
+.progress .value {
+	font-size: 180px;
+}
+.progress .text {
+	font-size: 120px;
+}
+
+
+/* .noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+		cursor: default;
+} */
 /******************************* profile css **********************************/
