fixing some bug styles

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -4,16 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  color: white;
-}
-
-body {
-  min-width: 300px;
-  min-height: 750px;
-}
 
 html {
+  min-width: 300px;
+  min-height: 750px;
   background: rgb(44, 59, 124);
   background: linear-gradient(
     90deg,
@@ -21,6 +15,7 @@ html {
     rgba(13, 23, 67, 1) 100%
   );
   font-family: 'Outfit';
+  color: white;
 }
 
 /* css properties that I couldn't do with tailwind :sad: */
@@ -98,8 +93,8 @@ html {
 
 @media only screen and (min-device-width: 640px) {
   button:hover .friend-icon {
-    fill: #0097E2; /* Change to the color you want */
-    transform: translate(-3.4rem, 0)
+    fill: #0097e2; /* Change to the color you want */
+    transform: translate(-3.4rem, 0);
   }
 }
 
@@ -110,8 +105,8 @@ button:hover .friend-icon {
 
 @media only screen and (max-width: 600px) {
   button:hover .friend-icon {
-    fill: #0097E2; /* Change to the color you want */
-    transform: translate(0, -1.7rem)
+    fill: #0097e2; /* Change to the color you want */
+    transform: translate(0, -1.7rem);
   }
 }
 
@@ -119,7 +114,7 @@ button:hover .friend-text {
   visibility: visible;
   opacity: 1;
   transition: opacity 0.3s, visibility 0.3s;
-  color:#0097E2 
+  color: #0097e2;
 }
 
 /******************************* profile css **********************************/
