--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -117,4 +117,20 @@ button:hover .friend-text {
   color: #0097e2;
 }
 
+
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  width: 7px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+ 
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(50, 55, 145);
+  border-radius: 5px;
+}
+
 /******************************* profile css **********************************/
