feat: added scrollbar styles

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -131,10 +131,12 @@ button:hover .friend-text {
 
 .scrollbar::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 .scrollbar::-webkit-scrollbar-track {
   width: 7px;
+  height: 7px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 }
