--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -133,19 +133,18 @@ button:hover .friend-text {
 }
 
 *::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    width:  6px;
+    height: 6px;
 }
 
 *::-webkit-scrollbar-track {
-    width: 7px;
-    height: 7px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: rgb(220, 220, 220);
     border-radius: 5px;
 }
 
 *::-webkit-scrollbar-thumb {
     background-color: rgb(50, 55, 145);
+    border: 0.25px solid rgb(220, 220, 220);
     border-radius: 5px;
 }
 
